# Agentic-Fastapi

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  pyproject.toml  rent_a_car.db
.claude/: current-work.md  settings.local.json
.claude/adw/: state.py
.claude/adw/workflows/: __init__.py  develop.py  full.py  review.py
.claude/commands/: develop.md  review.md  run.md  test.md
adw-bootstrap/: README.md
adw-bootstrap/.claude/adw/: cli.py
adw-bootstrap/.claude/commands/: conditional_docs.md  develop.md  prime.md  project.md  review.md  run.md  test.md
app/: __init__.py  config.py  main.py
app/api/v1/: router.py
app/exceptions/: __init__.py
app/models/: __init__.py  booking.py  car.py  customer.py
app/repositories/: booking.py  car.py
app/schemas/: __init__.py  booking.py  car.py
app/services/: booking.py  car.py
backend/app/: database.py
backend/app/api/: dependencies.py
backend/app/exceptions/: handlers.py
backend/app/models/: base.py
backend/app/repositories/: __init__.py  base.py  customer.py
backend/app/schemas/: customer.py
backend/app/services/: __init__.py  customer.py
backend/tests/: conftest.py  test_bookings.py  test_cars.py
frontend/: README.md  package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/types/: api.ts  booking.ts  car.ts  customer.ts
scripts/: comment_aca755.md  create_linear_issues.py  plan_aca755.md  post_linear_comment.py  review_aca755.md  test_results_aca755.md  test_setup.py
tests/: test_bookings.py  test_customers.py
(+26 files in other folders)
